[gd_scene load_steps=3 format=3 uid="uid://dy53yc6sllkv5"]

[ext_resource type="Script" uid="uid://bnkomwd57am4d" path="res://Scripts/wave_ui.gd" id="1_jjliy"]
[ext_resource type="FontFile" uid="uid://she0a0h1u8l6" path="res://Fonts/Baby Bears.ttf" id="2_uhatw"]

[node name="WaveUI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_jjliy")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 15.0
offset_right = 41.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_uhatw")
theme_override_font_sizes/font_size = 50
text = "00:00"

[node name="AnnouncementLabel" type="Label" parent="Container"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_uhatw")
theme_override_font_sizes/font_size = 200
text = "WAVE 1"
horizontal_alignment = 1
